--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -13,6 +13,8 @@ dist
 dist-ssr
 *.local
 
+
+.env.local
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -38,6 +40,7 @@ dist-ssr
 *#
 ssl
 
+env
 
 ############################
 # Node.js
