--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-act": "^1.8.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
