--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
